add section 2 3 4 to docs

--- a/sec5_UncertaintyAversion.ipynb
+++ b/sec5_UncertaintyAversion.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5 Uncertainty aversion"
+    "# 5 Uncertainty aversion\n",
+    "\n",
+    "This notebook corresponds to the section 5 of the paper."
    ]
   },
   {
@@ -27,11 +29,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Current model\n",
-    "\n",
-    "### 1.1 Stochastic inputs\n",
+    "## 5.2 Stochastic climate pulses\n",
     "\n",
     "Our economy includes   exogenous forcing processes that evolves as:\n",
+    "\n",
     "$$\n",
     "dZ_t = \\mu_z(Z_t) dt + \\sigma_z(Z_t) dW_t\n",
     "$$\n",
@@ -42,67 +43,6 @@
     "We allow for robustness by allowing changes in probabilities that imply drift distortions $H_t dt$ in the Brownian increment $dW_t$.  \n",
     "As the solutions to the stochastic differential equations are functions of the underlying Brownian motions, the probability measure changes for the Brownian motions change the probabilities implied by the solutions to the stochastic differential equations. \n",
     "\n",
-    "### 1.2 Technology\n",
-    "\n",
-    "Consider an economy with an  $AK$ technology for which   output is \n",
-    "proportional to capital. Output can be allocated  between investment  and consumption.     Suppose that there are adjustment costs to capital that are represented as the product of capital\n",
-    "times a quadratic function of the investment-capital ratio.  A robust planner chooses consumption-capital and investment-capital ratios.\n",
-    "\n",
-    "Given the constraint on output imposed by  the $AK$ technology, it suffices to let  the planner choose the\n",
-    "investment-capital ratio.   \n",
-    "\n",
-    "\n",
-    "Formally, capital   evolves as\n",
-    "\n",
-    "$$\n",
-    "d K_t =  K_t   \\left[ \\mu_k (Z_t) \\cdot dt + \\left({\\frac {I_t}{K_t}} \\right)dt - {\\frac { \\kappa} 2} \\left( {\\frac {I_t} {K_t}} \\right)^2 dt \n",
-    "+ \\sigma_k(Z_t) \\cdot dW_t^1 \\right]\n",
-    "$$\n",
-    "\n",
-    "where $K_t$ is the capital stock and $I_t$ is investment.  \n",
-    "\n",
-    "The capital evolution expressed in logarithms is\n",
-    "\n",
-    "$$\n",
-    "d\\log K_t =  \\left[ \\mu_k (Z_t^k)    + \\left({\\frac {I_t}{K_t}} \\right)  -\n",
-    "{\\frac { \\kappa} 2} \\left( {\\frac {I_t} {K_t}} \\right)^2 \\right] dt -  {\\frac  {\\vert \\sigma_k(Z_t^1) \\vert^2}  2}dt+ \\sigma_k(Z_t^1) \\cdot dW_t^1 ,\n",
-    "$$\n",
-    "\n",
-    "where $K_t$ is the capital stock.  Consumption and investment are constrained to be:\n",
-    "\n",
-    "$$\n",
-    "C_t + I_t = \\alpha K_t\n",
-    "$$\n",
-    "where $C_t$ is consumption.  \n",
-    "\n",
-    "We suppose that temperature shifts proportionately consumption and capital by a multiplicative factor \n",
-    "$N_t$  that captures damages to the productive capacity induced by climate change.  For instance the \n",
-    "damage adjusted consumption is ${\\widetilde C}_t =  {\\frac {C_t}{N_t}}$ and the damage adjusted capital is ${\\widetilde K}_t = {\\frac {{K}_t }{N_t}}$.  Notice that \n",
-    "\n",
-    "$$\n",
-    "d \\log {\\widetilde K}_t = d \\log K_t - d \\log N_t \n",
-    "$$\n",
-    "\n",
-    "Thus damages induce a deterioration of  the capital stock."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Add capital simulation here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.3 Damage dynamics\n",
-    "\n",
-    "\n",
-    "#### 1.3.1 Stochastic climate pulses\n",
     "\n",
     "Consider an emissions \"pulse\" of the form\n",
     "\n",
@@ -118,37 +58,39 @@
     "\n",
     "where\n",
     "\n",
+    "$$\n",
     "\\begin{align*}\n",
     "\\mu_y(z, e) & =  e \\left(\\iota_y \\cdot Z_t \\right)   \\theta   \\cr\n",
     "\\sigma_y(z,e) & =  e \\left(\\iota_y \\cdot Z_t \\right) \\varsigma'\n",
     "\\end{align*}\n",
+    "$$\n",
     "\n",
     "We will eventually introduce uncertainty about $\\theta$.  \n",
     "\n",
     "\n",
-    "##### 1.3.2 Remark\n",
-    "For a more general starting point, let $Y_t$ be a vector used to represent temperature dynamics where the temperature\n",
+    "> **Remark**\n",
+    "*For a more general starting point, let $Y_t$ be a vector used to represent temperature dynamics where the temperature\n",
     "impact on damages is the first component of  $Y_t$. \n",
-    "This state vector evolves according to:\n",
-    "\n",
-    "$$\n",
+    "This state vector evolves according to:*\n",
+    ">\n",
+    ">$$\n",
     "dY_t = \\Lambda Y_t dt +    \\left(\\iota_y \\cdot Z_t \\right) \\mathcal{E}_t \\left(\\Theta dt + \\Sigma dW_t \\right) \n",
     "$$\n",
-    "\n",
-    "where $\\Lambda$ is a square matrix and $\\Theta$ is a column vector.  \n",
-    "Given an initial condition $Y_0$, the solution for $Y_t$ satisfies:\n",
-    "\n",
-    "$$\n",
+    ">\n",
+    ">*where $\\Lambda$ is a square matrix and $\\Theta$ is a column vector.  \n",
+    ">Given an initial condition $Y_0$, the solution for $Y_t$ satisfies:*\n",
+    ">\n",
+    ">$$\n",
     "Y_t = \\exp \\left( t \\Lambda \\right) Y_0 + \\int_0^t  \\exp\\left[ (t-u) \\Lambda \\right] \\left(\\iota_y \\cdot Z_t \\right) \\mathcal{E}_t \\left(\\Theta dt + \\Sigma dW_t \\right)\n",
     "$$\n",
-    "\n",
-    "Thus under this specification, the expected future response of $Y$  to a pulse at date zero is:\n",
-    "\n",
-    "$$\n",
+    ">\n",
+    ">*Thus under this specification, the expected future response of $Y$  to a pulse at date zero is:*\n",
+    ">\n",
+    ">$$\n",
     "\\lambda_u = \\exp \\left( u \\Lambda \\right) \\Theta.  \n",
     "$$\n",
-    "\n",
-    "It is the first component of $\\lambda_u$ that is of particular interest."
+    ">\n",
+    ">*It is the first component of $\\lambda_u$ that is of particular interest.*"
    ]
   },
   {
@@ -183,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.4 Economic damages\n",
+    "## 5.3 Economic damages\n",
     "  \n",
     "The local evolution of damages is given by\n",
     "\n",
@@ -255,11 +197,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Uncertainty aversion\n",
+    "## 5.4 Uncertainty aversion\n",
     "\n",
     "The model so far is one of risk as captured by the stochastic specification of shocks.  The presence of shocks opens the door to a comprehensive assessment of uncertainty conceived more broadly.  Specification uncertainty faced by a decision maker can be discussed in the formal stochastic structure.  We analyze this uncertainty using the formalism of decision theory under uncertainty.  We apply two versions of such theory, one comes under the heading of variational preferences and the other under smooth ambiguity preferences.  We adapt both to continuous time specifications, which facilitates their implementation and interpretation.  We use this decision theory to reduce the sensitivity analysis to a one or two dimensional parameterization that locates the potential misspecification that is most consequential to a decision maker.  Our aim is to provide a more complete uncertainty quantification within the setting of the decision problem.  \n",
     "\n",
-    "### 2.1 Misspecified Brownian motion\n",
+    "### 5.4.1 Misspecified Brownian motion\n",
     "\n",
     "The potential misspecification of a Brownian motion has a particularly simple form.  It is known from the famed Girsanov Theorem that a change in distribution represented by a likelihood ratio is a drift distortion.  Under such a change in probability distribution, the $dW_t$ is a Brownian increment with a drift that can be state dependent, which we denote $H_t dt$.  Thus we modify our (locally) normally distributed shocks by entertaining a possible mean distortion.  \n",
     "We use a relative entropy penalty, which for a continuous time Brownian specification is the quadratic ${\\frac 1 2} |H_t|^2 dt$.  This formulation leads to a straightforward adjustment to an HJB equation.  Let $\\phi$ denote a value function defined as a function of the Markov state\n",
@@ -290,7 +232,7 @@
     "\n",
     "We explore aversion to the misspecification of Brownian risk by including this term in the HJB equation.  Large values of $\\xi_w $ make this contribution less consequential. While the direct impact is evident from the division by $\\xi_w$, the value function, and hence its partial derivative, also depends on $\\xi$.  The partial derivative of the value function is included to locate distortions that matter to the decision maker.\n",
     "\n",
-    "### 2.2 Misspecified jump process\n",
+    "### 5.4.2 Misspecified jump process\n",
     "\n",
     "There are two ways that a jump process could be misspecified.  The jump intensity governing locally the jump probability could be wrong or the probability distribution across the alternative states, in this case damage function specifications, could  be mistaken.  We capture both forms of misspecification by introducing positive random variables $G_t^j \\ge 0 $ for each alternative damage model $j$ with local evolution:\n",
     "\n",
@@ -343,7 +285,7 @@
     "$$\n",
     "\n",
     "\n",
-    "### 2.3 Local ambiguity aversion\n",
+    "### 5.4.3 Local ambiguity aversion\n",
     "\n",
     "To assess the consequences of the heterogeneous responses from alternative climate models, we use what are called smooth \n",
     "ambiguity preferences.  In deploying such preferences, we use a robust prior interpretation in conjunction with the continuous time formulation of smooth ambiguity proposed by Hansen and Miao.  Suppose that we have $n$ different climate model drift specifications for $\\mu_x^i$ for model $i$.  Let $\\pi^a_i$ denote the probability of drift model $i$.  Standard model averaging would have use\n",
@@ -377,94 +319,14 @@
     "$$\n",
     "\n",
     "We have introduced three different parameters $(\\xi_b, \\xi_p, \\xi_a)$ that guide our sensitivity analysis.   Anderson, Hansen, Sargent suggest that $\\xi_b = \\xi_p$.  They also suggest ways to calibrate this parameter based on statistical detection challenges.  As the smooth ambiguity model also induces a drift distortion, we can adjust the $\\xi_a$ parameter to have a structured drift distortion of a comparable magnitude.  We also are guided by an approach from robust Bayesian analysis attributed to Good that inspects the implied distortions for a *priori* plausibility.  \n",
-    "In our  pedagogical discussion so far,  we have seemingly ignored possible interactions between damage uncertainty and climate uncertainty.  In fact, these interactions will be present as climate change uncertainty will impact the value function contributions given by the $\\phi_j$'s and by $\\phi$.  \n",
-    "\n",
-    "\n",
-    "## 3. A climate component of the planner's HJB\n",
-    "\n",
-    "As we show in the appendix, the planners HJB equation conveniently separates into three different components.  We focus here on the component that includes the choice emissions, $\\mathcal{E}_t$.  Let $ \\mathcal{\\widetilde E}_t = \\iota_y \\cdot Z_t \\mathcal{E}_t$, which we will use as a transformed \n",
-    "control variable.   In the absence of any specification uncertainty, the HJB equation of interest for $y <  {\\bar y}$ prior to Poisson jump is:\n",
-    "\n",
-    "\\begin{align} \\label{HJB_no}\n",
-    "0 = \\max_{\\tilde e} \n",
-    "& - \\delta \\phi(y)    +  \\eta \\log \\tilde e   \\cr \n",
-    "& + \\frac {d \\phi(y)}{d y}  \\sum_{i=1}^n \\pi^a_i  \\theta_i {\\tilde e} + {\\frac 1 2} \\frac {d^2 \\phi(y)}{(dy)^2} |\\varsigma|^2 \\tilde e^2  \\cr\n",
-    "&+ \\frac{(\\eta - 1)}{\\delta} \\left[  \\left( \\gamma_1 + \\gamma_2 y \\right)  \\sum_{i=1}^n \\pi^a_i \\theta_i {\\tilde e} + {\\frac 1 2} \\gamma_2 |\\varsigma|^2 \\tilde e^2 \\right]\\cr\n",
-    "& + {\\mathcal I}(y)  \\sum_{m=1}^M \\pi_m^p \\left( \\phi_m - \\phi \\right) \n",
-    "\\end{align} \n",
-    "\n",
-    "for a value function given by $\\phi(y) + \\frac{(\\eta - 1)}{\\delta} n$.  This is an equation in the value function $\\phi$ but the depends on the continuation value functions $\\phi_m$ pertinent after the tail of damage function is realized.  These value functions solve equations:\n",
-    "\n",
-    "\\begin{align*}\n",
-    "0 = \\max_{\\tilde e} \n",
-    "& - \\delta \\phi_j(y)    +  \\eta \\log \\tilde e    \\cr \n",
-    "& + \\frac {d \\phi_j(y)}{d y}  \\sum_{i=1}^n \\pi^a_i  \\theta_i {\\tilde e} + {\\frac 1 2} \\frac {d^2 \\phi_j(y)}{(dy)^2} |\\varsigma|^2 \\tilde e^2  \\cr\n",
-    "&+ \\frac{(\\eta - 1)}{\\delta} \\left(  \\left[ \\gamma_1 + \\gamma_2 y + \\gamma_3^j (y - {\\bar y})  \\right]   \\sum_{i=1}^n \\pi^a_i \\theta_i {\\tilde e}\n",
-    "+ {\\frac 1 2}(\\gamma_2 + \\gamma_3)   |\\varsigma|^2 \\tilde e^2  \\right)\n",
-    "\\end{align*} \n",
-    "for $j=1,2,...,m$.  The solutions for these $m$ HJB equations are inputs in the first HJB equation.    Given the localized nature of the jump intensity, we expect\n",
-    "\n",
-    "$$\n",
-    "\\phi\\left( {\\bar y} \\right) \\approx \\sum_{m=1}^M \\pi_m^p \\phi_m\\left( {\\bar y} \\right).\n",
-    "$$\n",
-    "\n",
-    "We now show the terms added in our sensitivity analysis:\n",
-    "\n",
-    "\n",
-    "- Brownian misspecification: include\n",
-    "$$\n",
-    "- \\frac {\\xi_b} 2 \\left\\vert\\left[ \\frac {d \\phi(y)}{d y} + \\frac{(\\eta - 1)}{\\delta}   \\left( \\gamma_1 + \\gamma_2 y\\right)  \\right] \\right\\vert^2 |\\varsigma|^2  \\tilde e^2 .\n",
-    "$$\n",
-    " \n",
-    "- Climate model ambiguity: replace \n",
-    "\n",
-    "$$\n",
-    " \\sum_{i=1}^n \\pi_i^a  \\theta_i \\left[ \\frac {d \\phi(y)}{d y} + \\frac{(\\eta - 1)}{\\delta}  \\left( \\gamma_1 + \\gamma_2 y \\right)\\right] {\\tilde e}\n",
-    "$$\n",
-    "\n",
-    "with ambiguity adjusted certainty equivalent:\n",
-    "\n",
-    "$$\n",
-    "- \\xi_a \\log \\sum_{i=1}^n\\pi_i^a \\exp\\left( - \\frac 1 {\\xi_a} \\theta_i \\left[\\frac {d \\phi(y)}{d y}  + \\frac{(\\eta -1)}{\\delta} \\left( \\gamma_1 + \\gamma_2 y \\right) \\right] {\\tilde e}\\right)\n",
-    "$$\n",
-    "\n",
-    "- Jump misspecification: replace ${\\mathcal I}(y)  \\sum_{m=1}^M \\pi_m^p \\left[ \\phi_m(y) - \\phi(y)  \\right] $ with:\n",
-    "\n",
-    "$$\n",
-    "- \\left(\\xi_p {\\mathcal I}\\right) \\frac {\\sum_{m=1}^M \\pi_m^p \\exp \\left(- \\frac 1 {\\xi_p} \\phi_m\\right) - \\exp \\left(- \\frac 1 {\\xi_p} \\phi \\right)}{\\exp \\left(- \\frac 1 {\\xi_p} \\phi \\right)}\n",
-    "$$\n",
-    "\n",
-    "and make corresponding adjustments to the Brownian and climate model uncertainty contributions.  \n",
-    "When this jump risk adjustment is made, we expect:\n",
-    "\n",
-    "$$\n",
-    "\\phi(\\overline y) \\approx - \\xi_p \\log \\sum_{m=1}^M \\pi_m^p \\exp \\left[- \\frac 1 {\\xi_p} \\phi_m({\\overline y}) \\right]\n",
-    "$$\n",
-    "\n",
-    "where the right side is the certainty equivalent for an ambiguity  adjusted post jump continuation value.  For our computations, we impose this as a boundary value.  \n",
-    "\n",
-    "In what follows we will impose these terms separately and with with the first and third or second and third.  The first and second give unstructured and structured ways to impose drift distortions.  While their comparison is interesting, we see little rationale to impose both of them simultaneously.\n",
-    "\n",
-    "### 3.1 Computational details\n",
-    "\n",
-    "Write down the false transient method here."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Solve the HJB without jump and with jump\n",
-    "### Try different ξ values"
+    "In our  pedagogical discussion so far,  we have seemingly ignored possible interactions between damage uncertainty and climate uncertainty.  In fact, these interactions will be present as climate change uncertainty will impact the value function contributions given by the $\\phi_j$'s and by $\\phi$.  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Continue to the next section\n",
+    "**Continue to the next section**\n",
     "    \n",
     "Section 6: [A climate component of a planner's decision problem](sec6_DecisionProblem.ipynb)"
    ]
