--- a/appendices.ipynb
+++ b/appendices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "exempt-counter",
+   "id": "advised-government",
    "metadata": {},
    "source": [
     "# A.  Complete model\n",
@@ -130,9 +130,12 @@
     "    & + \\xi_a \\sum_i \\color{blue}{\\omega^a_\\ell}(\\log\\color{blue}{\\omega^a_\\ell} - \\log \\pi^a_\\ell)\n",
     "    \\end{aligned}\n",
     "    $$\n",
+    "    \n",
+    "    Blued $\\color{blue}{\\tilde e}$ and $\\color{blue}{\\omega_\\ell}$ indicate they are computed using $\\color{blue}{\\phi_i(y)}$.\n",
     "\n",
-    "    The method we use to solve the ODE is **conjugate-gradient method**.\n",
-    "    Blued $\\tilde e$ and $\\omega_\\ell$ indicate they are computed using $\\phi_i(y)$.\n",
+    "    The method we use to solve the ODE is **biconjugate-gradient method**. \n",
+    "    Use `?scipy.sparse.linalg.bicg` for document.\n",
+    "    See also wiki page for [**biconjugate gradient method**](https://en.wikipedia.org/wiki/Biconjugate_gradient_method).\n",
     "\n",
     "4. Check whether the convergence condition is satisfied. \n",
     "    We call left-hand side formula *left-hand side error*.\n",
@@ -143,13 +146,13 @@
     "    $$\n",
     "    \n",
     "    and we get the solution $\\phi(y) = \\phi_{i+1}(y)$.\n",
-    "    Otherwise, continue with step 1.-3. after assigning $\\phi_{i+1}(y)$ to $\\phi_i(y)$."
+    "    Otherwise, assign $\\phi_{i+1}(y)$ to $\\phi_i(y)$, and repeat step 1-4."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "handled-poker",
+   "id": "welsh-venture",
    "metadata": {},
    "outputs": [],
    "source": [
