--- a/sec2_UncertainClimateDynamics.ipynb
+++ b/sec2_UncertainClimateDynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "alpine-closing",
+   "id": "fatty-boundary",
    "metadata": {},
    "source": [
     "# 2 Uncertain climate dynamics\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "built-values",
+   "id": "compatible-covering",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "persistent-split",
+   "id": "common-exception",
    "metadata": {},
    "source": [
     "## 2.2 Stochastic climate pulses\n",
@@ -146,6 +146,16 @@
     "> **Remark 2**\n",
     ">\n",
     "> The  approximation in \\cite{Geoffroy:2013} includes the logarithm of carbon in the atmosphere as argued for by \\cite{Arrhenius:1896} which is not directly reflected in the linear approximation to the temperature dynamics that we use.  The pulse experiments from \\cite{Joosetal:2013} show a more than proportional change in atmospheric carbon when the pulse size is changed.  It turns out that this is enough to approximately offset the logarithmic \\citeauthor{Arrhenius:1896} adjustment so that the long-term temperature response remains approximately proportional for small pulse sizes.  See also \\cite{Pierrehumbert:2014} who discusses the approximate offsetting impacts of nonlinearity in temperature and climate dynamics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "pacific-concert",
+   "metadata": {},
+   "source": [
+    "Next section:\n",
+    "\n",
+    "[Section 3: Stochastic damage](sec3_StochasticDamage.ipynb)"
    ]
   }
  ],
