change slider to button

--- a/sec5_UncertaintyAversion.ipynb
+++ b/sec5_UncertaintyAversion.ipynb
@@ -17,7 +17,7 @@
     "## 5.1 Misspecified brownian motion\n",
     "\n",
     "The potential misspecification of a Brownian motion has a particularly simple form.  It is known from the famed Girsanov Theorem that a change in distribution represented by a likelihood ratio is a drift distortion.  Under such a change in probability distribution, the $dW_t$ is a Brownian increment with a drift that can be state dependent, which we denote $H_t dt$.  Thus we modify our (locally) normally distributed shocks by entertaining a possible mean distortion.  \n",
-    "We use a relative entropy penalty, which for a continuous time Brownian specification is the quadratic ${\\frac 1 2} |H_t|^2 dt$.  This formulation leads to a straightforward adjustment to an HJB equation.  Let $\\phi$ denote a value function defined as a function of the Markov state\n",
+    "We use a relative entropy penalty, which for a continuous time Brownian specification is the quadratic ${\\frac 1 2} \\mid H_t\\mid^2 dt$.  This formulation leads to a straightforward adjustment to an HJB equation.  Let $\\phi$ denote a value function defined as a function of the Markov state\n",
     "$X_t$.  Suppose the local  Brownian contribution to the state evolution $dX_t$ is $\\sigma_x(X_t) H_tdt$.  Then $H_tdt$ contributes \n",
     "$\\sigma_x(X_t) H_t dt$ to the state evolution.   \n",
     "\n",
