change interval model

--- a/notebook/jump_damage_decompose_minimization_100.ipynb
+++ b/notebook/jump_damage_decompose_minimization_100.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cooperative-radio",
+   "id": "sufficient-catholic",
    "metadata": {
     "code_folding": [],
     "scrolled": true
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "sought-homework",
+   "id": "excited-palace",
    "metadata": {
     "code_folding": [],
     "scrolled": true
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "clear-creature",
+   "id": "addressed-atlantic",
    "metadata": {
     "scrolled": true
    },
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "imperial-prescription",
+   "id": "corresponding-earthquake",
    "metadata": {
     "code_folding": [
      0
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "typical-stuart",
+   "id": "abstract-costs",
    "metadata": {
     "scrolled": true
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "designed-quebec",
+   "id": "piano-crown",
    "metadata": {},
    "source": [
     "# Jump model of damages\n",
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "multiple-hello",
+   "id": "fitted-cookbook",
    "metadata": {
     "code_folding": [],
     "scrolled": true
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "little-techno",
+   "id": "suited-virginia",
    "metadata": {
     "code_folding": [
      0
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "after-shore",
+   "id": "hired-broad",
    "metadata": {
     "code_folding": [],
     "scrolled": true
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hazardous-heart",
+   "id": "suburban-moisture",
    "metadata": {},
    "source": [
     "# SCC uncertainty decomposition: pre jump\n",
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "radio-helping",
+   "id": "accompanied-guess",
    "metadata": {
     "code_folding": [
      0
@@ -415,11 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "starting-riding",
+   "id": "impressed-senior",
    "metadata": {
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "scrolled": true
    },
    "outputs": [],
@@ -469,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compressed-chapter",
+   "id": "distinguished-weekend",
    "metadata": {},
    "source": [
     "# SCC uncertainty decomposition: pre jump\n",
@@ -510,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "asian-change",
+   "id": "innocent-junction",
    "metadata": {
     "code_folding": [
      0
@@ -570,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "local-district",
+   "id": "intense-tulsa",
    "metadata": {},
    "source": [
     "## Minimize over $\\pi^c$\n",
@@ -588,8 +586,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "massive-projector",
+   "execution_count": 11,
+   "id": "senior-information",
    "metadata": {
     "code_folding": [
      1
@@ -653,8 +651,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "structural-aspect",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.182493960703473"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(np.exp(5/2*(2.5 -1.5)**2 ) -1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "residential-borough",
+   "id": "champion-analyst",
    "metadata": {},
    "source": [
     "# Minimize over $g_i$\n",
@@ -670,8 +689,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "affiliated-mayor",
+   "execution_count": 12,
+   "id": "divided-welsh",
    "metadata": {
     "code_folding": [],
     "scrolled": true
@@ -728,7 +747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intense-excuse",
+   "id": "corporate-terrorist",
    "metadata": {},
    "source": [
     "# Computation"
@@ -737,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "serial-wholesale",
+   "id": "pediatric-discretion",
    "metadata": {
     "scrolled": true
    },
@@ -782,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "touched-canyon",
+   "id": "fatal-opinion",
    "metadata": {
     "code_folding": [],
     "scrolled": true
@@ -862,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "worthy-summit",
+   "id": "responsible-affiliate",
    "metadata": {
     "code_folding": [],
     "scrolled": true
@@ -927,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "french-clarity",
+   "id": "listed-yugoslavia",
    "metadata": {
     "code_folding": [],
     "scrolled": true
@@ -1007,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "forty-sense",
+   "id": "small-implement",
    "metadata": {
     "code_folding": [],
     "scrolled": false
